# cat-click-anomaly

./: .gitignore  EXECUTION_PLAN.md  EXECUTION_PLAN_V2.md  Log Anomaly Detection System Requirements.md  Log Anomaly Detection Upgrade Plan.md  README.md  create_view.py  docker-compose.no-catboost.yml  docker-compose.with-bridge.yml  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt  train.py
.cursor/rules/: docker-clickhouse.mdc  project-standards.mdc  python-standards.mdc  tests-standards.mdc
.github/workflows/: ci.yml
clickhouse/config.d/: catboost.xml  listen.xml
docker/: Dockerfile.clickhouse-with-bridge
docs/: CLICKHOUSE_CATBOOST_TROUBLESHOOTING.md  CONSUMING_ANOMALOUS_EVENTS.md  PRODUCTION_LOG_ANOMALY_DESIGN.md  RUNBOOK.md  STEP_BY_STEP_V2.md
scripts/: download_libcatboostmodel.sh  validate_anomaly_output.py
src/: config.py  data.py  feature_store.py  generator.py  inference.py  schema.py
tests/: conftest.py  test_clickhouse_connectivity.py  test_feature_store.py  test_generator.py  test_inference.py  test_ingest.py  test_schema.py  test_train_data.py  test_train_model.py
